--- a/public/index.html
+++ b/public/index.html
@@ -4,5 +4,9 @@
 <label>Imagen: <input id="file" type="file" accept="image/*"></label>
 <button id="btn">Predecir</button>
 <pre id="out"></pre>
+
+<!-- PON AQUÍ TU URL REAL DEL BACKEND -->
 <script>window.BACKEND_URL="https://actividad3-backend-120082619573.us-central1.run.app";</script>
-<script src="../src/app.js"></script>
+
+<!-- Como el js estará en /public, referéncialo local -->
+<script src="./app.js"></script>
